# mlops_hse_2024

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Dockerfile-mlflow  Dockerfile.base  LICENSE  README.md  create_minio_bucket.sh  docker-compose.yml  mlflow-docker-compose.yml  mlflow_init.sh  pyproject.toml  setup.py  test_notebook.ipynb
.github/workflows/: ci-cd.yml
datasets/sample_data1/: train_data.csv
datasets/sample_data2/: test_data.csv
gui/: Dockerfile  utils.py  🏚_Главная.py
gui/pages/: 1_🏋️‍♀️_Обучение.py  2_🚀_Предсказания.py  3_📝_Управление.py
gui/static/: README.md  __init__.py
integration_tests/: conftest.py  test_s3.py
models/: __init__.py  model_manager.py
models/ml_models/: base_model.py  ml_models.py
notebooks/: test_notebook.ipynb
server/: model_manager.py
server/grpc/: Dockerfile  app.py  model_service.proto  model_service_pb2.py  model_service_pb2_grpc.py  run.py  server.py
server/grpc/proto/: model_service.proto  model_service_pb2.py
server/models/: base_model.py  ml_models.py
server/rest/: Dockerfile  app.py  run.py
unit_tests/: conftest.py  test_model_saving.py
